@@ -552,8 +552,8 @@ sub change_geometry {
 	$left = 0 if $left < 0;
 	$top = 0 if $top < 0;
 
-	$lines = $deskwin->lines if $top < $self->window->top && $lines == $self->window->lines;
-#	$cols = $deskwin->cols if $left < $self->window->left && $cols == $self->window->cols;
+	$lines = $deskwin->lines if $top < $self->window->top && $self->window->bottom == $deskwin->bottom;
+	$cols = $deskwin->cols if $left < $self->window->left && $self->window->right == $deskwin->right;
 
 	$lines = $deskwin->lines - $top if $top + $lines > $deskwin->lines;
 	$cols = $deskwin->cols - $left if $left + $cols > $deskwin->cols;
